Fix code block spacing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -110,13 +110,18 @@ p {
 /* Code highlight override */
 pre[class*="language-"] {
   padding: var(--spacer1) !important;
-  margin: 0 0 var(--spacer2) 0 !important;
+  margin: 0 !important;
   background: #fffcfa !important;
   font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
   font-size: var(--size1) !important;
   border: 1px solid #f6e2d9;
   border-radius: 2px !important;
   overflow-x: scroll;
+}
+
+/* Code highlight override */
+.gatsby-highlight {
+  margin: 0 0 var(--spacer2) 0 !important;
 
   &:last-child {
     margin-bottom: 0 !important;
